--- a/src/style/_blocks.scss
+++ b/src/style/_blocks.scss
@@ -44,19 +44,43 @@
 
   &.BlockPortfolio {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
+    flex-flow: row wrap;
+    justify-content: space-around;
     align-items: center;
     background-color: $cream;
     min-height: 100px;
 
-    .icon-link {
-      margin-top: 20px;
-      flex: 1 0 auto;
+    .linkWrap {
+      flex: 1 1 30%;
+      min-width: 200px;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: flex-end;
 
-      img {
-        &.octocat, &.stack-overflow {
-          max-height: 75px;
+      .icon {
+        flex: 1 0 100%;
+        margin: 100px auto $rem20;
+
+        &.octocat::after {
+            height: 75px;
+            width: 100%;
+            bottom: 100%;
+            left: calc(50% - #{$rem32});
+          }
+
+        &.bitbucket::after {
+          height: 50px;
+          width: 200px;
+          bottom: 100%;
+          left: -50%;
+        }
+
+        &.linkedin::after {
+          height: 75px;
+          width: 100%;
+          bottom: 100%;
+          left: calc(50% - #{$rem35});
         }
       }
     }
@@ -64,6 +88,11 @@
 
   &.BlockExperience {
     margin: $rem20;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
   }
 
   &.BlockEducation {
@@ -74,14 +103,16 @@
   }
 
   &.BlockFooter {
-    background-color: transparent;
-
     .contactBlock {
-      background-color: $cream;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      align-items: center;
+      align-self: stretch;
     }
 
     .credit-source {
-      margin: $rem16;
+      margin: $rem57 $rem16 $rem8;
 
       a, span {
         font-size: $rem12;
