--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -32,14 +32,9 @@ $heavy: 700;
 
 //Colors
 $black: rgba(32, 26, 30, 1);
-//$white: white;
+$gray: rgba(197, 194, 193, 1);
 $cream: rgba(227,215,211, 1);
 $red: rgba(176, 99, 82, 1);
-//$dark-blue: rgba(29,28,116, 1);
-//$dark-blue-50: rgba(29,28,116, 0.5);
-//$light-blue: rgba(203,255,235, 1);
-//$med-blue-50: rgba(2,121,127, 0.5);
-//$med-blue: rgba(2,121,127, 1);
 
 //Mix-ins
 @mixin title {
@@ -52,6 +47,6 @@ $red: rgba(176, 99, 82, 1);
 @mixin inputText {
   color: $cream;
   font-family: $source-sans-pro;
-  font-size: $rem16;
+  font-size: $rem20;
   font-weight: $regular;
 }
