Experience is updated and styled.

--- a/src/style/_blocks.scss
+++ b/src/style/_blocks.scss
@@ -90,9 +90,54 @@
     margin: $rem20;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    gap: $rem16;
+    justify-content: space-around;
     align-items: center;
     align-self: stretch;
+
+    .wrap-betacanon {
+      padding-top: $rem16;
+
+      .betacanon {
+        margin-left: 90px;
+
+        &::after {
+          height: $rem64;
+          width: 90px;
+          bottom: 0;
+          left: -80px;
+        }
+      }
+    }
+
+    .wrap-projects {
+      text-align: center;
+
+      ul {
+        margin: $rem20;
+        display: flex;
+        flex-flow: row wrap;
+        gap: $rem16;
+        justify-content: space-around;
+        align-items: stretch;
+
+        li.item {
+          flex: 1 0 30%;
+          min-width: 200px;
+          text-align: left;
+          margin-top: 50px;
+
+          .icon {
+            &.golowpro::after, &.textual::after, &.kagedmuscle::after {
+              height: $rem40;
+              width: 140px;
+              bottom: $rem20;
+              left: 0;
+            }
+          }
+        }
+      }
+    }
   }
 
   &.BlockEducation {
