--- a/src/style/index.css
+++ b/src/style/index.css
@@ -297,9 +297,20 @@ body .icon.kagedmuscle::after {
   bottom: 1.25rem;
   left: 0;
 }
-.block.BlockEducation .education {
-  background: #201a1e;
-  margin: 1.25rem;
+.block.BlockEducation {
+  padding: 1.25rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: #c5c2c1;
+}
+.block.BlockEducation > * {
+  flex: 0 1 50%;
+  min-width: 400px;
+  margin-bottom: 16px;
+}
+.block.BlockEducation > * p, .block.BlockEducation > * h3 {
+  color: #201a1e;
 }
 .block.BlockFooter .contactBlock {
   display: flex;
@@ -307,6 +318,7 @@ body .icon.kagedmuscle::after {
   justify-content: center;
   align-items: center;
   align-self: stretch;
+  margin-top: 1.25rem;
 }
 .block.BlockFooter .credit-source {
   margin: 3.563rem 16px 0.5rem;
