--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -109,7 +109,7 @@ body {
     margin: $rem8 auto;
     padding: $rem8;
     background: $red;
-    border: 1px solid $black;
+    border: 1px solid $red;
     border-radius: $rem16;
     color: $cream;
     font-family: $source-sans-pro;
