--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -33,6 +33,7 @@ $heavy: 700;
 
 //Colors
 $black: rgba(32, 26, 30, 1);
+$black-50: rgba(32, 26, 30, 0.5);
 $gray: rgba(197, 194, 193, 1);
 $cream: rgba(227,215,211, 1);
 $red: rgba(176, 99, 82, 1);
