--- a/src/style/_blocks.scss
+++ b/src/style/_blocks.scss
@@ -44,7 +44,7 @@
         display: flex;
         gap: $rem20;
         flex-flow: row wrap;
-        justify-content: space-around;
+        justify-content: center;
 
         .button {
           color: $red;
