--- a/src/style/sass/_global.scss
+++ b/src/style/sass/_global.scss
@@ -151,35 +151,35 @@ body {
     }
 
     &.envelope-dots::after {
-      background-image: url('../images/icons8-envelope-dots-100.png');
+      background-image: url('../../images/icons8-envelope-dots-100.png');
     }
 
     &.octocat::after {
-      background-image: url('../images/GitHub-Mark/PNG/GitHub-Mark-120px-plus.png');
+      background-image: url('../../images/GitHub-Mark/PNG/GitHub-Mark-120px-plus.png');
     }
 
     &.bitbucket::after {
-      background-image: url('../images/bitbucket-atlassian-logo.svg');
+      background-image: url('../../images/bitbucket-atlassian-logo.svg');
     }
 
     &.linkedin::after {
-      background-image: url('../images/LinkedIn-Logos/LI-In-Bug.png');
+      background-image: url('../../images/LinkedIn-Logos/LI-In-Bug.png');
     }
 
     &.betacanon::after {
-      background-image: url('../images/beta-canon-logo-mark.svg');
+      background-image: url('../../images/beta-canon-logo-mark.svg');
     }
 
     &.golowpro::after {
-      background-image: url('../images/logo-glp.png');
+      background-image: url('../../images/logo-glp.png');
     }
 
     &.textual::after {
-      background-image: url('../images/client-logo-textual.svg');
+      background-image: url('../../images/client-logo-textual.svg');
     }
 
     &.kagedmuscle::after {
-      background-image: url("../images/client-logo-kaged-muscle.svg");
+      background-image: url("../../images/client-logo-kaged-muscle.svg");
     }
   }
 }
